--- a/scripts/compare_offline_vs_local_vs_api_preds_3.ipynb
+++ b/scripts/compare_offline_vs_local_vs_api_preds_3.ipynb
@@ -131,7 +131,7 @@
       "{'Naive_MAE_std': 8.660919, 'Naive_Median_AE_std': 8.660919, 'Naive_RMSE_std': 440.95224, 'Naive_MAPE_std': 27.074996, 'Naive_SMAPE_std': 15.148398}\n",
       "\n",
       "Metrics:\n",
-      "{'MAE': 4.60136, 'Median_AE': 2.241791, 'RMSE': 9.285774, 'MAPE': 7.752077, 'SMAPE': 6.208843, 'inference_time': 0.511488, 'inference_time_per_sample': 1e-06}\n",
+      "{'MAE': 4.60136, 'Median_AE': 2.241791, 'RMSE': 9.285774, 'MAPE': 7.752077, 'SMAPE': 6.208843, 'inference_time': 0.495374, 'inference_time_per_sample': 1e-06}\n",
       "\n",
       "Metrics Standard Deviations:\n",
       "{'MAE_std': 8.064352, 'Median_AE_std': 8.064352, 'RMSE_std': 406.359192, 'MAPE_std': 29.625842, 'SMAPE_std': 13.987556}\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "[600000 rows x 7 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "Timestamp('2023-03-15 00:00:00')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -428,172 +428,17 @@
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sensor_id</th>\n",
-       "      <th>input_time</th>\n",
-       "      <th>prediction_time</th>\n",
-       "      <th>y_pred_delta</th>\n",
-       "      <th>horizon</th>\n",
-       "      <th>y_pred_total</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>RWS01_MONIBAS_0040vwe0633ra</td>\n",
-       "      <td>2023-03-15 00:00:00</td>\n",
-       "      <td>2023-03-15 00:15:00</td>\n",
-       "      <td>6.834698</td>\n",
-       "      <td>15</td>\n",
-       "      <td>93.634701</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>RWS01_MONIBAS_0040vwe0637ra</td>\n",
-       "      <td>2023-03-15 00:00:00</td>\n",
-       "      <td>2023-03-15 00:15:00</td>\n",
-       "      <td>6.468986</td>\n",
-       "      <td>15</td>\n",
-       "      <td>103.668983</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>RWS01_MONIBAS_0040vwe0755ra</td>\n",
-       "      <td>2023-03-15 00:00:00</td>\n",
-       "      <td>2023-03-15 00:15:00</td>\n",
-       "      <td>3.320071</td>\n",
-       "      <td>15</td>\n",
-       "      <td>89.830074</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>RWS01_MONIBAS_0040vwe0757ra</td>\n",
-       "      <td>2023-03-15 00:00:00</td>\n",
-       "      <td>2023-03-15 00:15:00</td>\n",
-       "      <td>1.946928</td>\n",
-       "      <td>15</td>\n",
-       "      <td>87.946928</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>RWS01_MONIBAS_0040vwe0758ra</td>\n",
-       "      <td>2023-03-15 00:00:00</td>\n",
-       "      <td>2023-03-15 00:15:00</td>\n",
-       "      <td>2.287275</td>\n",
-       "      <td>15</td>\n",
-       "      <td>92.427275</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>600163</th>\n",
-       "      <td>RWS01_MONIBAS_0201hrr0461ra</td>\n",
-       "      <td>2023-03-17 01:01:00</td>\n",
-       "      <td>2023-03-17 01:16:00</td>\n",
-       "      <td>-2.365949</td>\n",
-       "      <td>15</td>\n",
-       "      <td>102.894053</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>600164</th>\n",
-       "      <td>RWS01_MONIBAS_0201hrr0465ra</td>\n",
-       "      <td>2023-03-17 01:01:00</td>\n",
-       "      <td>2023-03-17 01:16:00</td>\n",
-       "      <td>-1.121641</td>\n",
-       "      <td>15</td>\n",
-       "      <td>106.040361</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>600165</th>\n",
-       "      <td>RWS01_MONIBAS_0201hrr0470ra</td>\n",
-       "      <td>2023-03-17 01:01:00</td>\n",
-       "      <td>2023-03-17 01:16:00</td>\n",
-       "      <td>-5.010976</td>\n",
-       "      <td>15</td>\n",
-       "      <td>101.537020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>600166</th>\n",
-       "      <td>RWS01_MONIBAS_0201hrr0475ra</td>\n",
-       "      <td>2023-03-17 01:01:00</td>\n",
-       "      <td>2023-03-17 01:16:00</td>\n",
-       "      <td>-3.083875</td>\n",
-       "      <td>15</td>\n",
-       "      <td>102.144130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>600167</th>\n",
-       "      <td>RWS01_MONIBAS_0201hrr0478ra</td>\n",
-       "      <td>2023-03-17 01:01:00</td>\n",
-       "      <td>2023-03-17 01:16:00</td>\n",
-       "      <td>-10.213108</td>\n",
-       "      <td>15</td>\n",
-       "      <td>98.794895</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>600168 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                          sensor_id           input_time      prediction_time  \\\n",
-       "0       RWS01_MONIBAS_0040vwe0633ra  2023-03-15 00:00:00  2023-03-15 00:15:00   \n",
-       "1       RWS01_MONIBAS_0040vwe0637ra  2023-03-15 00:00:00  2023-03-15 00:15:00   \n",
-       "2       RWS01_MONIBAS_0040vwe0755ra  2023-03-15 00:00:00  2023-03-15 00:15:00   \n",
-       "3       RWS01_MONIBAS_0040vwe0757ra  2023-03-15 00:00:00  2023-03-15 00:15:00   \n",
-       "4       RWS01_MONIBAS_0040vwe0758ra  2023-03-15 00:00:00  2023-03-15 00:15:00   \n",
-       "...                             ...                  ...                  ...   \n",
-       "600163  RWS01_MONIBAS_0201hrr0461ra  2023-03-17 01:01:00  2023-03-17 01:16:00   \n",
-       "600164  RWS01_MONIBAS_0201hrr0465ra  2023-03-17 01:01:00  2023-03-17 01:16:00   \n",
-       "600165  RWS01_MONIBAS_0201hrr0470ra  2023-03-17 01:01:00  2023-03-17 01:16:00   \n",
-       "600166  RWS01_MONIBAS_0201hrr0475ra  2023-03-17 01:01:00  2023-03-17 01:16:00   \n",
-       "600167  RWS01_MONIBAS_0201hrr0478ra  2023-03-17 01:01:00  2023-03-17 01:16:00   \n",
-       "\n",
-       "        y_pred_delta  horizon  y_pred_total  \n",
-       "0           6.834698       15     93.634701  \n",
-       "1           6.468986       15    103.668983  \n",
-       "2           3.320071       15     89.830074  \n",
-       "3           1.946928       15     87.946928  \n",
-       "4           2.287275       15     92.427275  \n",
-       "...              ...      ...           ...  \n",
-       "600163     -2.365949       15    102.894053  \n",
-       "600164     -1.121641       15    106.040361  \n",
-       "600165     -5.010976       15    101.537020  \n",
-       "600166     -3.083875       15    102.144130  \n",
-       "600167    -10.213108       15     98.794895  \n",
-       "\n",
-       "[600168 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "Cannot compute y_pred_total (missing 'target_total_speed' in features).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m raw_df_test \u001b[38;5;241m=\u001b[39m raw_df_test\u001b[38;5;241m.\u001b[39mloc[(raw_df_test[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39mtdp\u001b[38;5;241m.\u001b[39mfirst_test_timestamp) \u001b[38;5;241m&\u001b[39m (raw_df_test[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m last_timestamp)]\n\u001b[1;32m      3\u001b[0m rt \u001b[38;5;241m=\u001b[39m InferenceRuntime(artifact_path) \n\u001b[0;32m----> 4\u001b[0m pred_df_local,_ \u001b[38;5;241m=\u001b[39m \u001b[43mrt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict_df\u001b[49m\u001b[43m(\u001b[49m\u001b[43mraw_df_test\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m pred_df_local\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m#raw_df_test\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/Emeralds/Emeralds_traffic_state_forecasting_repos/traffic_flow_project/traffic_flow_package_src/traffic_flow/service/runtime.py:41\u001b[0m, in \u001b[0;36mInferenceRuntime.predict_df\u001b[0;34m(self, df_raw)\u001b[0m\n\u001b[1;32m     39\u001b[0m feats \u001b[38;5;241m=\u001b[39m feats\u001b[38;5;241m.\u001b[39mreindex(columns\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfeature_cols, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m     40\u001b[0m pred_delta \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mpredict(feats)\n\u001b[0;32m---> 41\u001b[0m pred_df \u001b[38;5;241m=\u001b[39m \u001b[43mmake_prediction_frame\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     42\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdf\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdf_raw\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     43\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfeats\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfeats\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     44\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpred_delta\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpred_delta\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     45\u001b[0m \u001b[43m    \u001b[49m\u001b[43mstates\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstates\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     46\u001b[0m \u001b[43m    \u001b[49m\u001b[43mhorizon_min\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhorizon\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     47\u001b[0m \u001b[43m    \u001b[49m\u001b[43madd_total\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     48\u001b[0m \u001b[43m    \u001b[49m\u001b[43msensor_col\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msensor_id\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     49\u001b[0m \u001b[43m    \u001b[49m\u001b[43madd_y_act\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\n\u001b[1;32m     50\u001b[0m \u001b[43m    \u001b[49m\n\u001b[1;32m     51\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m pred_df, feats\n",
+      "File \u001b[0;32m~/Documents/Emeralds/Emeralds_traffic_state_forecasting_repos/traffic_flow_project/traffic_flow_package_src/traffic_flow/inference/prediction_protocol.py:57\u001b[0m, in \u001b[0;36mmake_prediction_frame\u001b[0;34m(df, feats, pred_delta, states, horizon_min, add_total, add_y_act, datetime_col, sensor_col, value_col, target_col)\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m add_y_act:\n\u001b[1;32m     56\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m target_col \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m df\u001b[38;5;241m.\u001b[39mcolumns:\n\u001b[0;32m---> 57\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot compute y_pred_total (missing \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtarget_total_speed\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m in features).\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     58\u001b[0m     out[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my_act_total\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m df[target_col]\u001b[38;5;241m.\u001b[39mto_numpy(dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mfloat\u001b[39m)\n\u001b[1;32m     59\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m out\n",
+      "\u001b[0;31mValueError\u001b[0m: Cannot compute y_pred_total (missing 'target_total_speed' in features)."
+     ]
     }
    ],
    "source": [
